Refactor(discovery): 调整搜索索引gateway重建签名